# robo

./: .cursorrules  .env.example  .gitattributes  .gitignore  .mcp.json  .pip-audit-known-vulnerabilities  AETHERRADIO_IMPLEMENTATION_GUIDE.md  AGENTS.md  API_ROUTES.md  ARCHITECTURE.md  BUILDING.md  CLAUDE.md  CODEBASE_REVIEW.md  CONFIG_VALIDATION.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DGN-DJ_BRANDING.md  DGN-DJ_Fullstack_Launcher.bat  DGN-DJ_Launcher.bat  DGNDJ_Fullstack_Launcher.bat  FEATURE_HEAVY_ROADMAP_TODO.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  LICENSE.txt  MASSIVE_WORKFLOW_BLUEPRINT.md  Makefile  ONLINE_RADIO_DJ_DESIGN.md  PERSONA_OPS.md  PHASES_9_TO_15_DESIGN.md  PHASE_0_SETUP.md  PHASE_1_DATABASE.md  PHASE_2_AUTH.md  PHASE_3_AUDIO_ENGINE.md  PHASE_4_FILE_UPLOAD.md  PHASE_5_AI_INTEGRATION.md  PHASE_7_BROADCASTING.md  PHASE_8_DASHBOARD_UI.md  PRE_RELEASE_CHECKLIST.md  PRODUCT_READINESS_PLAN.md  PROJECT_STRUCTURE.md  (+61 more)
.artifacts/: dgn-dj-studio-config.tgz
.context/: activeContext.md  activeContext.md.bak-2026-03-28  productContext.md  progress.md  progress.md.bak-2026-03-28  systemPatterns.md  techStack.md
.jules/: bolt.md  sentinel.md
.lsp/: config.json
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.ralph-state/: history.json  state.json
backend/: ai_api.py  ai_service.py  (+7 more)
dgn-airwaves/: README.md  pyproject.toml
dgn-airwaves/tests/: test_dgn_airwaves.py
dgn-robo-rippa/: pyproject.toml
dgn-robo-rippa/src/dgn_robo_rippa/: main.py
(+1094 files in other folders)
